@@ -2,20 +2,68 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jwebmp</groupId>
-    <artifactId>jwebmp-dev-kit</artifactId>
+    <groupId>com.guicedee</groupId>
+    <artifactId>dev-kit</artifactId>
     <version>0.0.0_0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>JWebMP Development Kit</name>
-    <description>The root folder for JWebMP Build libraries</description>
+    <name>Guiced EE Development Kit</name>
+    <description>The core maven build properties</description>
     <url>https://jwebmp.com</url>
 
-    <modules>
-		<module>JWebMPBOM</module>
-		<module>JWebMPParent</module>
-    </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
+        <maven.assembly.version>3.1.0</maven.assembly.version>
+        <maven.jar.version>3.1.0</maven.jar.version>
+        <maven.clean.version>3.1.0</maven.clean.version>
+        <maven.dependency.version>3.1.1</maven.dependency.version>
+        <maven.javadoc.version>3.0.1</maven.javadoc.version>
+        <maven.deploy.version>3.0.0-M1</maven.deploy.version>
+        <maven.install.version>3.0.0-M1</maven.install.version>
+        <maven.source.version>3.0.1</maven.source.version>
+        <maven.site.version>3.7.1</maven.site.version>
+        <maven.shade.version>3.2.1</maven.shade.version>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.surefire.version>3.0.0-M3</maven.surefire.version>
+        <maven.failsafe.version>3.0.0-M1</maven.failsafe.version>
+        <maven.resources.version>3.1.0</maven.resources.version>
+        <maven.release.version>2.5.3</maven.release.version>
+        <maven.versions.version>2.7</maven.versions.version>
+        <maven.verifyier.version>1.1</maven.verifyier.version>
+        <maven.asm.version>7.2</maven.asm.version>
+        <maven.gpg.version>1.6</maven.gpg.version>
+
+        <maven.war.version>3.2.2</maven.war.version>
+        <maven.ear.version>3.0.1</maven.ear.version>
+        <maven.ejb.version>3.0.1</maven.ejb.version>
+
+        <build.helper.maven.plugin.version>3.0.0</build.helper.maven.plugin.version>
+
+        <netbeans.hint.license>gpl30</netbeans.hint.license>
+        <license.dir>${basedir}</license.dir>
+
+        <junit.jupiter.version>5.5.0</junit.jupiter.version>
+        <hamcrest.version>1.3</hamcrest.version>
+        <assertj.version>3.12.2</assertj.version>
+        <mockito.version>3.0.0</mockito.version>
+        <mockito.all.version>2.0.2-beta</mockito.all.version>
+
+        <selenium.version>3.141.59</selenium.version>
+        <selenium.jupiter.version>3.2.2</selenium.jupiter.version>
+
+        <sonarqube.version>3.7.0.1746</sonarqube.version>
+        <jacoco.version>0.8.4</jacoco.version>
+        <sonar.profile>The Good Place</sonar.profile>
+        <sonar.host.url>https://guicedee.com/sonar</sonar.host.url>
+        <sonar.exclusions>**bower_components,**src/test,**/test/**,**/module-info.java</sonar.exclusions>
+
+        <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
+        <jdk.release>12</jdk.release>
+
+        <surefireArgLine> </surefireArgLine>
+    </properties>
 
     <licenses>
         <license>
@@ -53,8 +101,57 @@
         <url>http://jwebmp.com/teamcity</url>
     </ciManagement>
 
+    <dependencies>
+        <!-- Test Libraries -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+
+    </dependencies>
 
     <profiles>
+        <profile>
+            <id>enable-guicedee</id>
+            <modules>
+                <module>GuicedEE</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>enable-jwebmp</id>
+            <modules>
+                <module>JWebMPParent</module>
+                <module>JWebMPBOM</module>
+            </modules>
+        </profile>
+
         <profile>
             <id>jwebmp-distribution</id>
             <activation>
@@ -145,7 +242,6 @@
                     </plugin>
 
                     <plugin>
-                        <!-- This plugin doesn't work inside pluginManagement, for some reason -->
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
                         <version>1.6.8</version>
@@ -178,38 +274,304 @@
                 </plugins>
             </build>
         </profile>
-
-        <profile>
-            <id>enable-guice</id>
-        </profile>
-        <profile>
-            <id>enable-guicedee</id>
-        </profile>
-        <profile>
-            <id>enable-commons</id>
-        </profile>
-        <profile>
-            <id>enable-thirdparty</id>
-        </profile>
-        <profile>
-            <id>enable-jqxwidgets</id>
-        </profile>
-        <profile>
-            <id>enable-plugins</id>
-        </profile>
-        <profile>
-            <id>enable-examples</id>
-        </profile>
-        <profile>
-            <id>enable-apps</id>
-        </profile>
-
-        <profile>
-            <id>devkit</id>
-            <modules>
-                <!--<module>ComponentTemplate</module>-->
-            </modules>
-        </profile>
     </profiles>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${maven.clean.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>${maven.shade.version}</version>
+                    <configuration>
+                        <createDependencyReducedPom>false</createDependencyReducedPom>
+                        <createSourcesJar>true</createSourcesJar>
+                        <shadeSourcesContent>true</shadeSourcesContent>
+                        <shadeTestJar>true</shadeTestJar>
+                        <keepDependenciesWithProvidedScope>false</keepDependenciesWithProvidedScope>
+
+                        <filters>
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>1.java</exclude>
+                                    <exclude>META-INF/*.SF</exclude>
+                                    <exclude>META-INF/*.DSA</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>
+                                </excludes>
+                            </filter>
+                        </filters>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.version}</version>
+                    <configuration>
+                        <source>${jdk.release}</source>
+                        <target>${jdk.release}</target>
+                        <release>${jdk.release}</release>
+                        <annotationProcessorPaths>
+                            <annotationProcessorPath>
+                                <groupId>com.guicedee.services</groupId>
+                                <artifactId>hibernate-jpamodelgen</artifactId>
+                                <version>${project.version}</version>
+                            </annotationProcessorPath>
+                            <annotationProcessorPath>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>1.18.8</version>
+                            </annotationProcessorPath>
+                            <path>
+                                <groupId>com.guicedee.services</groupId>
+                                <artifactId>jakarta.xml.bind-api</artifactId>
+                                <version>${project.version}</version>
+                            </path>
+                            <path>
+                                <groupId>com.guicedee.services</groupId>
+                                <artifactId>jakarta.annotation-api</artifactId>
+                                <version>${project.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>1.3.0.Final</version>
+                            </path>
+                        </annotationProcessorPaths>
+                        <compilerArguments>
+                            <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
+                            <Adebug>true</Adebug>
+                        </compilerArguments>
+                        <failOnError>true</failOnError>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven.assembly.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>${maven.versions.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${maven.deploy.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven.jar.version}</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-verifier-plugin</artifactId>
+                    <version>${maven.verifyier.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.jupiter</groupId>
+                            <artifactId>junit-jupiter-engine</artifactId>
+                            <version>${junit.jupiter.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.3.0.Final</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <argLine>--add-opens java.base/java.lang=com.google.guice,javassist ${surefireArgLine}
+                        </argLine>
+                        <testFailureIgnore>true</testFailureIgnore>
+
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>${maven.source.version}</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>${maven.site.version}</version>
+
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.doxia</groupId>
+                            <artifactId>doxia-site-renderer</artifactId>
+                            <version>1.8.1</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.6.0</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${maven.resources.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>${maven.javadoc.version}</version>
+                    <configuration>
+                        <detectJavaApiLink>false</detectJavaApiLink>
+                        <offlineLinks>
+                            <offlineLink>
+                                <!--suppress UnresolvedMavenProperty -->
+                                <url>https://docs.oracle.com/javase/${maven.compiler.release}/docs/api/</url>
+                                <location>${project.basedir}</location>
+                            </offlineLink>
+                        </offlineLinks>
+                        <failOnError>false</failOnError>
+                        <javadocExecutable>/opt/jdk${jdk.release}/bin/javadoc</javadocExecutable>
+                        <additionalOptions>
+                            <additionalOption>-Xdoclint:none</additionalOption>
+                        </additionalOptions>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>attach-javadoc</id>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>${sonarqube.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven.dependency.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${maven.release.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>${maven.gpg.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
+                </plugin>
+
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven.war.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ear-plugin</artifactId>
+                    <version>${maven.ear.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ejb-plugin</artifactId>
+                    <version>${maven.ejb.version}</version>
+                </plugin>
+
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.8</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>4.2.1</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.moditect</groupId>
+                    <artifactId>moditect-maven-plugin</artifactId>
+                    <version>1.0.0.Beta2</version>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- Benchmarking-->
+
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-core</artifactId>
+                <version>1.21</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-generator-annprocess</artifactId>
+                <version>1.21</version>
+                <scope>test</scope>
+                <type>jar</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
